src/objects/AgendaItem__c.object
<CustomObject>
    <fields>
        <fullName>AgendaItemTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda Item Template</label>
        <referenceTo>AgendaItemTemplate__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>AgendaItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda_Num__c</fullName>
        <label>Agenda Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectReview__c</fullName>
        <label>Project Review</label>
        <referenceTo>ProjectReview__c</referenceTo>
        <relationshipLabel>Agenda Items</relationshipLabel>
        <relationshipName>AgendaItemsProjectReview</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agenda Item</label>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>